--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -8,6 +8,6 @@ jobs:
     steps:
     - name: Print Issue Title and Body
       run: |
-        echo "${{ github.event.issue }}"
+        echo "${{ github.event.issue.title }}"
         echo "${{ github.event.issue.body }}"
       
