--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -1,5 +1,10 @@
 name: Github Workflow Example
-on: [push, workflow_dispatch]
+on: 
+    pull_request:
+        types: 
+            - opened
+            - closed
+    workflow_dispatch:
 jobs:
   lint:
     runs-on: ubuntu-latest
