--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -4,7 +4,18 @@ on:
         types: 
             - opened
             - closed
+        branches:
+            - main
+            - 'dev-*'
+            - 'feat/**'
     workflow_dispatch:
+    push:
+        branches:
+            - main
+            - 'dev-*'
+            - 'feat/**'
+        paths-ignore:
+            - '.github/workflows/*'
 jobs:
   lint:
     runs-on: ubuntu-latest
