--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -16,9 +16,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
             name: dist-files
-            path: |
-                dist
-                package.json
+            path: dist
 
   info:
     runs-on: ubuntu-latest
