--- a/.github/workflows/.artifact_manual.yml
+++ b/.github/workflows/.artifact_manual.yml
@@ -9,9 +9,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-      - run: npm ci
-      - run: npm install
-      - run: npm run build
+      - name: NPM CI
+        run: npm ci
+      - name: NPM Install
+        run: npm install
+      - name: NPM Build
+        run: npm run build
+      - name: Publish JS filename
+        run: find/dist/assets/*.js -type f -execdir echo '{}' ';'
       - name: Generate Artifcats
         uses: actions/upload-artifact@v3
         with:
