--- a/.github/workflows/artifact_automatic.yml
+++ b/.github/workflows/artifact_automatic.yml
@@ -3,15 +3,23 @@ on: [push, workflow_dispatch]
 jobs:
   Build:
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish.outputs.custom-file }}
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-      - run: npm ci
-      - run: npm install
-      - run: npm run build
+      - name: NPM CI
+        run: npm ci
+      - name: NPM Install
+        run: npm install
+      - name: NPM Build
+        run: npm run build
+      - name: Publish JS filename
+        id: publish
+        run: find/dist/assets/*.js -type f -execdir echo 'custom-file={}' >> $GITHUB_OUTPUT ';'
       - name: Generate Artifcats
         uses: actions/upload-artifact@v3
         with:
