--- a/.github/workflows/artifact_automatic.yml
+++ b/.github/workflows/artifact_automatic.yml
@@ -1,16 +1,36 @@
 name: Github Workflow Example
 on: [push, workflow_dispatch]
 jobs:
+  Test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Cache Dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: npm-cache-key-${{ hashFiles('**/package-lock.json') }}
+      - name: Install Dependencies
+        run: npm ci
+      - name: NPM Install
+        run: npm install
+      - name: NPM Lint
+        run: npm run lint
+      - name: NPM test
+        run: npm run test
+
   Build:
     runs-on: ubuntu-latest
+    needs: Test
     outputs:
       script-file: ${{ steps.publish.outputs.custom-file }}
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+      - name: Cache Dependencies
+        uses: actions/cache@v3
         with:
-          node-version: '20.x'
+          path: ~/.npm
+          key: npm-cache-key-${{ hashFiles('**/package-lock.json') }}
       - name: NPM CI
         run: npm ci
       - name: NPM Install
